# task-manager

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  app.py  docker-compose.yaml  pyproject.toml
src/: config.py
src/alembic/: env.py  script.py.mako
src/alembic/versions/: e1897bcf6ccb_makefile_generated_migration.py  e466678b7958_makefile_generated_migration.py
src/database/: __init__.py
src/database/model/: __init__.py  base.py  task.py
src/database/repostitory/: __init__.py  task.py
src/database/service/: __init__.py  task.py
src/service/: __init__.py
src/utility/: __init__.py  config.py  enums.py
src/web/: __init__.py
src/web/api/: __init__.py
src/web/api/exception/: __init__.py  handler.py  model.py
src/web/api/router/: __init__.py  task.py
src/web/schema/common/: __init__.py  response.py
src/web/schema/in/: __init__.py
src/web/schema/in_/: __init__.py  pagination.py  task.py
tests/: .gitignore
tests/env/default/: default.properties  python.properties
tests/specs/: tasks.spec
tests/step_impl/: step_impl.py
