[project]
name = "plassstic-template"
version = "0.1.0"
description = "190825 test"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "getgauge>=0.4.0",
    "requests>=2.32.3",
    "httpx>=0.28.1",
]
authors = [
    { name = "Alexey P.", email = "i@apechenin.ru" }
]
